fix overflow

--- a/CSS/24.tlou/styles/blocks/_global.css
+++ b/CSS/24.tlou/styles/blocks/_global.css
@@ -6,6 +6,8 @@ html {
 body {
   background-color: var(--background);
   color: var(--primary);
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 h2 {
